fixed footer issue where content did not align to very end of container div

--- a/css/styles.css
+++ b/css/styles.css
@@ -363,20 +363,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .container {
-  width: 92%;
   margin: 0 auto;
   max-width: 980px;
+  width: 92%;
 }
 
 html, body {
-  font-size: 1rem;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
   background-color: #2A2E39;
-  min-height: 100vh;
+  color: #fff;
   display: flex;
   flex-direction: column;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-size: 1rem;
   justify-content: space-between;
-  color: #fff;
+  min-height: 100vh;
 }
 
 #main-header {
@@ -392,8 +392,8 @@ html, body {
 }
 
 #header-title {
-  text-transform: capitalize;
   font-size: 1.3em;
+  text-transform: capitalize;
 }
 
 #header-sub-title {
@@ -401,15 +401,15 @@ html, body {
 }
 
 nav {
-  text-transform: capitalize;
   color: #576978;
+  text-transform: capitalize;
 }
 
 #nav-list {
   display: flex;
   justify-content: space-between;
-  padding-top: 1em;
   max-width: 450px;
+  padding-top: 1em;
 }
 #nav-list li {
   font-size: 1.1em;
@@ -430,28 +430,28 @@ nav {
   margin-top: 5em;
 }
 .btn-link a {
-  text-transform: uppercase;
-  font-weight: bold;
-  transition: color 0.5s ease;
   font-size: 1.3em;
+  font-weight: bold;
   letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: color 0.5s ease;
 }
 .btn-link a:hover {
   color: #DDAF94;
 }
 
 .main-content .container {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
   padding: 5em 0;
+  text-align: center;
 }
 
 .section-title {
   font-size: 3em;
-  text-transform: capitalize;
   margin-bottom: 1em;
+  text-transform: capitalize;
 }
 
 .main-text {
@@ -461,8 +461,8 @@ nav {
 }
 
 footer {
-  padding: 1em 0;
   color: #576978;
+  padding: 1em 0;
   text-align: center;
 }
 footer .container {
@@ -472,12 +472,12 @@ footer .container {
 #social-links {
   display: flex;
   justify-content: space-between;
-  width: 300px;
   margin: 0 auto;
+  width: 300px;
 }
 #social-links li {
-  margin-bottom: 0.8em;
   font-size: 1.1em;
+  margin-bottom: 0.8em;
   transition: color 0.5s ease-in-out;
 }
 #social-links li:hover {
@@ -493,16 +493,16 @@ footer .container {
 }
 
 #location {
+  color: #DDAF94;
   font-size: 0.8em;
   margin-top: 0.7em;
-  color: #DDAF94;
 }
 
 #intro-heading {
   font-size: 2.5em;
-  text-transform: capitalize;
-  margin-bottom: 0.5em;
   font-weight: normal;
+  margin-bottom: 0.5em;
+  text-transform: capitalize;
 }
 
 #intro-sub-heading {
@@ -544,9 +544,9 @@ footer .container {
 }
 @media screen and (min-width: 980px) {
   #main-header .container {
+    align-items: center;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
   }
 
   #nav-list li {
@@ -566,28 +566,28 @@ footer .container {
   }
 
   .main-text {
-    text-align: left;
     font-size: 1.5em;
     max-width: 700px;
+    text-align: left;
   }
 
   footer .container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 20px;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
   }
 
   #social-links {
-    grid-column: 1/4;
+    margin: 0;
+  }
+  #social-links li {
     margin: 0;
   }
 
-  #copyright, #location {
+  #copyright {
     margin: 0;
-  }
-
-  #location {
-    grid-column: 4/5;
   }
 }
 
